--- a/CIFAR_10/Activation.ipynb
+++ b/CIFAR_10/Activation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +19,31 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
-    "from models import nin\n",
+    "from models import nin_store as nin\n",
     "from torch.autograd import Variable\n",
     "import tqdm\n",
     "import time\n",
     "import numpy as np\n",
     "\n",
+    "def load_pretrained(filePath):\n",
+    "    model = nin.Net()\n",
+    "    pretrained_model = torch.load(filePath)\n",
+    "    useState_dict = model.state_dict()\n",
+    "    preState_dict = pretrained_model['state_dict']\n",
+    "    useKeys = useState_dict.keys()\n",
+    "    preKeys = preState_dict.keys()\n",
+    "    j = 0\n",
+    "    for key in useKeys:\n",
+    "        if key.find('num_batches_tracked') == -1:\n",
+    "            useState_dict[key].data = preState_dict[preKeys[j]].data\n",
+    "            j +=1\n",
+    "    model.load_state_dict(useState_dict)\n",
+    "    model.to(device)\n",
+    "    return model\n",
+    "\n",
     "def BitInverse(i, key, shape):\n",
     "    \n",
-    "    model = nin.Net()\n",
-    "    pretrained_model = torch.load(args.pretrained)\n",
-    "    model.load_state_dict(pretrained_model['state_dict'])\n",
-    "    model.to(device)\n",
+    "    model = load_pretrained('nin.best.pth.tar')\n",
     "    bin_op = util.BinOp(model)\n",
     "    model.eval()\n",
     "    bin_op.binarization()\n",
@@ -41,7 +54,7 @@
     "        size1 = shape[1]\n",
     "        size2 = shape[2]\n",
     "        size3 = shape[3]\n",
-    "        (state_dict[key][int(i/size1/size2/size3)][int(i/size2/size3%size1)][int(i/size3%size2)][int(i%size3)]).mul_(-1)\n",
+    "        #(state_dict[key][int(i/size1/size2/size3)][int(i/size2/size3%size1)][int(i/size3%size2)][int(i%size3)]).mul_(-1)\n",
     "\n",
     "    if len(shape) == 1:\n",
     "        state_dict[key][i].mul_(-1)\n",
@@ -49,24 +62,172 @@
     "    if len(shape) == 2:\n",
     "        size = state_dict[key].shape[1]\n",
     "        (state_dict[key][int(i/size)][i%size]).mul_(-1)\n",
-    "\n",
+    "    \n",
+    "    model.load_state_dict(state_dict)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def test(i, key, shape, memoryData = None):\n",
+    "    activations = []\n",
     "    test_loss = 0\n",
     "    correct = 0\n",
     "    \n",
-    "    BitInverse(i, key, shape)        \n",
+    "    model = BitInverse(i, key, shape)\n",
+    "    model.eval()\n",
     "    with torch.no_grad():\n",
-    "        for data, target in memoryData:\n",
-    "            data, target = Variable(data.to(device)), Variable(target.to(device))\n",
+    "        for data, target in tqdm.tqdm_notebook(memoryData, leave = False):\n",
+    "            data, target = data.to(device), target.to(device)\n",
     "\n",
-    "            output = model(data)\n",
+    "            output, activation = model(data)\n",
     "            #test_loss += criterion(output, target).data.item()\n",
     "            pred = output.data.max(1, keepdim=True)[1]\n",
     "            correct += pred.eq(target.data.view_as(pred)).cpu().sum()\n",
+    "            activations += [activation]\n",
+    "            \n",
     "    bin_op.restore()\n",
     "    acc = 100. * float(correct) / float(len(testloader.dataset))\n",
     "    #print (acc,correct,len(testloader.dataset))\n",
-    "    return acc"
+    "    return acc, activations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conv1.weight\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=20), HTML(value=u'')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device('cuda:1' if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# set the seed\n",
+    "torch.manual_seed(1)\n",
+    "torch.cuda.manual_seed(1)\n",
+    "\n",
+    "# prepare the data\n",
+    "if not os.path.isfile('./data/'+'/train_data'):\n",
+    "    # check the data path\n",
+    "    raise Exception\\\n",
+    "            ('Please assign the correct data path with --data <DATA_PATH>')\n",
+    "\n",
+    "testset = data.dataset(root='./data/', train=False)\n",
+    "indices = np.load(\"subset_CIFAR10.npy\")\n",
+    "testloader = torch.utils.data.DataLoader(testset,\n",
+    "                             batch_size=512, shuffle=False, num_workers=4)\n",
+    "\n",
+    "# define classes\n",
+    "classes = ('plane', 'car', 'bird', 'cat',\n",
+    "        'deer', 'dog', 'frog', 'horse', 'ship', 'truck')\n",
+    "\n",
+    "# define the model\n",
+    "model = load_pretrained('nin.best.pth.tar')\n",
+    "\n",
+    "# define the binarization operator\n",
+    "bin_op = util.BinOp(model)\n",
+    "\n",
+    "# do the evaluation if specified\n",
+    "bestAcc = 86.28\n",
+    "memoryData = []\n",
+    "\n",
+    "find_key = \"conv1.weight\"\n",
+    "print(find_key)\n",
+    "state_dict = model.state_dict()\n",
+    "\n",
+    "for key in state_dict.keys():\n",
+    "    if key.find(find_key) != -1:\n",
+    "        total = 1\n",
+    "        shape = state_dict[key].shape\n",
+    "        use_key = key\n",
+    "        for t in range(len(state_dict[key].shape)):\n",
+    "            total *= state_dict[key].shape[t]       \n",
+    "\n",
+    "for data_batches in tqdm.tqdm_notebook(testloader, leave = False):\n",
+    "    memoryData += [data_batches]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5b787c9ddaad45199da789f65c53325e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=1), HTML(value=u'')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=20), HTML(value=u'')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "indices = [0]\n",
+    "with tqdm.tqdm_notebook(indices) as Loader:\n",
+    "    for i in Loader:\n",
+    "        acc, activation = test(i, use_key, shape = shape, memoryData = memoryData)\n",
+    "        loss = bestAcc - acc\n",
+    "        Loader.set_description(\"L: %.2f\"%(loss))\n",
+    "\n",
+    "        torch.save(activation, find_key+str(i)+'.unhappy.pt')"
    ]
   },
   {
@@ -74,114 +235,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "if __name__=='__main__':\n",
-    "    # prepare the options\n",
-    "    parser = argparse.ArgumentParser()\n",
-    "    parser.add_argument('--data', action='store', default='./data/',\n",
-    "            help='dataset path')\n",
-    "    parser.add_argument('--pretrained', action='store', default='nin.best.pth.tar',\n",
-    "            help='the path to the pretrained model')\n",
-    "    parser.add_argument('--evaluate', action='store_true', default=True,\n",
-    "            help='evaluate the model')\n",
-    "    parser.add_argument('--verbose', action='store_true', default=False,\n",
-    "            help='display more information')\n",
-    "    parser.add_argument('--device', action='store', default='cuda:1',\n",
-    "            help='input the device you want to use')\n",
-    "    args = parser.parse_args()\n",
-    "    if args.verbose:\n",
-    "        print('==> Options:',args)\n",
-    "    \n",
-    "    device = torch.device(args.device if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
-    "    # set the seed\n",
-    "    torch.manual_seed(1)\n",
-    "    torch.cuda.manual_seed(1)\n",
-    "\n",
-    "    # prepare the data\n",
-    "    if not os.path.isfile(args.data+'/train_data'):\n",
-    "        # check the data path\n",
-    "        raise Exception\\\n",
-    "                ('Please assign the correct data path with --data <DATA_PATH>')\n",
-    "\n",
-    "    testset = data.dataset(root=args.data, train=False)\n",
-    "    indices = np.load(\"subset_CIFAR10.npy\")\n",
-    "    testloader = torch.utils.data.DataLoader(testset,\n",
-    "                                 batch_size=512, shuffle=False, num_workers=4)\n",
-    "\n",
-    "    # define classes\n",
-    "    classes = ('plane', 'car', 'bird', 'cat',\n",
-    "            'deer', 'dog', 'frog', 'horse', 'ship', 'truck')\n",
-    "\n",
-    "    # define the model\n",
-    "    model = nin.Net()\n",
-    "    pretrained_model = torch.load(args.pretrained)\n",
-    "    best_acc = pretrained_model['best_acc']\n",
-    "    model.load_state_dict(pretrained_model['state_dict'])\n",
-    "\n",
-    "    model.to(device)\n",
-    "\n",
-    "    # define solver and criterion\n",
-    "    param_dict = dict(model.named_parameters())\n",
-    "    params = []\n",
-    "\n",
-    "    # define the binarization operator\n",
-    "    bin_op = util.BinOp(model)\n",
-    "\n",
-    "    # do the evaluation if specified\n",
-    "    if args.evaluate:\n",
-    "        rand = True\n",
-    "        bypass = True\n",
-    "        randFactor = 4\n",
-    "        count = 0\n",
-    "        tLoss = 0\n",
-    "        lMax = 0\n",
-    "        lAvg = 0\n",
-    "        bestAcc = 86.28\n",
-    "        save = []\n",
-    "        memoryData = []\n",
-    "\n",
-    "        find_key = \"11.conv.weight\"\n",
-    "        print(find_key)\n",
-    "        state_dict = model.state_dict()\n",
-    "    \n",
-    "        for key in state_dict.keys():\n",
-    "            if key.find(find_key) != -1:\n",
-    "                total = 1\n",
-    "                shape = state_dict[key].shape\n",
-    "                use_key = key\n",
-    "                for t in range(len(state_dict[key].shape)):\n",
-    "                    total *= state_dict[key].shape[t]       \n",
-    "        \n",
-    "        for data in tqdm.tqdm(testloader, leave = False):\n",
-    "            memoryData += [data]\n",
-    "        \n",
-    "        \n",
-    "        with tqdm.tqdm(range(total)) as Loader:\n",
-    "            start = time.time()\n",
-    "            for i in Loader:\n",
-    "                acc = test(i, use_key, shape = shape, rand = rand, bypass = bypass, randFactor=randFactor, memoryData = memoryData)\n",
-    "                loss = bestAcc - acc\n",
-    "                \n",
-    "                if (acc != 100):\n",
-    "                    count += 1\n",
-    "                    lAvg  = tLoss / float(count)\n",
-    "                    tLoss += loss\n",
-    "                    save.append((i,loss))\n",
-    "                    Loader.set_description(\"T: %d, Av: %.2f%%, M: %.2f%%\"%(count, lAvg, lMax))\n",
-    " \n",
-    "                if (loss > lMax):\n",
-    "                    lMax = loss\n",
-    "\n",
-    "                end = time.time()\n",
-    "                if (end - start > 300):\n",
-    "                    np.save(find_key+'_tmp',save)\n",
-    "                    start = end\n",
-    "\n",
-    "        np.save(find_key+'.neg', save)\n",
-    "        print (\"lAvg = %f%%, Max = %f%%\"%(lAvg, lMax))\n",
-    "        exit()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
