--- a/CIFAR_10/Visuallization.ipynb
+++ b/CIFAR_10/Visuallization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -24,13 +24,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1920, 2)\n"
+      "(14400, 2)\n",
+      "[13668 12162  7373  5867  8631 12611  6580  1312 12933  1287]\n"
      ]
     }
    ],
    "source": [
-    "a =  np.load(\"13.weight.neg.npy\")\n",
-    "print(a.shape)"
+    "a =  np.load(\"Results/neg_div_4/0.weight.neg.npy\")\n",
+    "print(a.shape)\n",
+    "sss = np.argsort(a[:,1])\n",
+    "print (sss[-10:])"
    ]
   },
   {
