--- a/CIFAR_10/Activation.ipynb
+++ b/CIFAR_10/Activation.ipynb
@@ -25,8 +25,11 @@
     "import time\n",
     "import numpy as np\n",
     "\n",
-    "def relativeLoss(origin, failure):\n",
+    "def vectorRelative(origin, failure):\n",
     "    return ((origin - failure).pow(2).sum())/(origin.pow(2).sum())\n",
+    "\n",
+    "def totalRelative(origin, failure):\n",
+    "    return ((origin - failure)/origin).pow(2).sum()/(len(origin.view(-1)))\n",
     "\n",
     "def compare_activations(origin, failure):\n",
     "    batches = len(origin)\n",
@@ -36,7 +39,7 @@
     "        for j in range(layers): \n",
     "            ori = origin[i][j].to(device)\n",
     "            fal = failure[i][j].to(device)\n",
-    "            difference[j] += relativeLoss(ori,fal)\n",
+    "            difference[j] += totalRelative(ori,fal)\n",
     "            del(ori)\n",
     "            del(fal)\n",
     "    \n",
@@ -199,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,9 +242,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0fd12a5675044d5984f77c4e0ea3b27c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=55), HTML(value=u'')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with tqdm.tqdm_notebook(upperIndices) as Loader:\n",
     "    differences = []\n",
@@ -250,14 +275,36 @@
     "        loss = bestAcc - acc\n",
     "        Loader.set_description(\"L: %.2f\"%(loss))\n",
     "        differences += [[compare_activations(origin, activation), loss, i]]\n",
-    "        torch.save(differences, 'upperDifferencesRelative.pt')"
+    "        torch.save(differences, 'upperDifferencestotalRelative.pt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e2b914b13a0d42d2ac5d9f6aefbeb5e9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=753), HTML(value=u'')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with tqdm.tqdm_notebook(lowerIndices) as Loader:\n",
     "    differences = []\n",
@@ -267,28 +314,33 @@
     "        loss = bestAcc - acc\n",
     "        Loader.set_description(\"L: %.2f\"%(loss))\n",
     "        differences += [[compare_activations(origin, activation), loss, i]]\n",
-    "        torch.save(differences, 'lowerDifferencesRelative.pt')"
+    "        torch.save(differences, 'lowerDifferencestotalRelative.pt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fuccc = torch.zeros([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.1961)\n",
-      "tensor(0.4812)\n"
+      "6\n"
      ]
     }
    ],
    "source": [
-    "a = torch.rand(10)\n",
-    "b = torch.rand(10)\n",
-    "print(torch.nn.MSELoss()(a,b))\n",
-    "print(((a - b).pow(2).sum())/a.pow(2).sum())"
+    "print(len(fuccc.view(-1)))"
    ]
   },
   {
